force-app/main/default/objects/Contact/fields/PayKon_Welcome_Survey__c.field-meta.xml
<CustomField>
    <fullName>PayKon_Welcome_Survey__c</fullName>
    <description>Copied from Associated Contact</description>
    <inlineHelpText>Copied from Associated Contact</inlineHelpText>
    <label>PayKon Welcome Survey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>