force-app/main/default/objects/Contact/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <description>Plan Status from Account</description>
    <formula>Account.Plan_Status__c</formula>
    <inlineHelpText>Plan Status from Account</inlineHelpText>
    <label>Plan Status</label>
    <type>Text</type>
</CustomField>