force-app/main/default/objects/Contact/fields/Plan_Value__c.field-meta.xml
<CustomField>
    <fullName>Plan_Value__c</fullName>
    <formula>TEXT(Account.Plan_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Value</label>
    <type>Text</type>
</CustomField>