force-app/main/default/objects/Contact/fields/PostCostcoOptIN__c.field-meta.xml
<CustomField>
    <fullName>PostCostcoOptIN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact Record PostCostcoOpt</description>
    <label>PostCostcoOptIN</label>
    <type>Checkbox</type>
</CustomField>