force-app/main/default/objects/Contact/fields/Preferred_Method_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Method_of_Communication__c</fullName>
    <defaultValue>&quot;No Preference&quot;</defaultValue>
    <description>Does the contact have a preferred method of communicating with Ubiquity?</description>
    <inlineHelpText>Does the contact have a preferred method of communicating with Ubiquity?</inlineHelpText>
    <label>Preferred Method of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>