force-app/main/default/objects/Contact/fields/Primary_Plan_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Plan_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Contact the Primary Plan Sponsor?</description>
    <inlineHelpText>Is the Contact the Primary Plan Sponsor?</inlineHelpText>
    <label>Primary Plan Sponsor</label>
    <type>Checkbox</type>
</CustomField>