force-app/main/default/objects/Contact/fields/Promotional_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client has opted out of promotional emails from Ubiquity.</description>
    <inlineHelpText>Client has opted out of promotional emails from Ubiquity.</inlineHelpText>
    <label>Promotional Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>