force-app/main/default/objects/Contact/fields/QA_Eligible__c.field-meta.xml
<CustomField>
    <fullName>QA_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this person eligible for QA in their current role? Used for tracking QA adoption rates.</description>
    <inlineHelpText>Is this person eligible for QA in their current role? Used for tracking QA adoption rates.</inlineHelpText>
    <label>QA Eligible</label>
    <type>Checkbox</type>
</CustomField>