force-app/main/default/objects/Contact/fields/Reach_Out_Required__c.field-meta.xml
<CustomField>
    <fullName>Reach_Out_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered via Pardot if final reminder email is sent. Originally built for Simply Implementations Flow</description>
    <label>Reach Out Required</label>
    <type>Checkbox</type>
</CustomField>