force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>Based on most current Role setting in Paradigm within the Plan</inlineHelpText>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan Sponsor</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Plan Sponsor &amp; Trustee</fullName>
            </value>
            <value>
                <fullName>Saver</fullName>
            </value>
            <value>
                <fullName>Saver &amp; Plan Sponsor</fullName>
            </value>
            <value>
                <fullName>Saver &amp; Trustee</fullName>
            </value>
            <value>
                <fullName>Saver &amp; Plan Sponsor &amp; Trustee</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Advisor - Operational Support</fullName>
            </value>
            <value>
                <fullName>Plan Sponsor &amp; Advisor</fullName>
            </value>
            <value>
                <fullName>Plan Sponsor &amp; Trustee &amp; Advisor</fullName>
            </value>
            <value>
                <fullName>Trustee &amp; Advisor</fullName>
            </value>
            <value>
                <fullName>Saver &amp; Advisor</fullName>
            </value>
            <value>
                <fullName>Saver &amp; Plan Sponsor &amp; Advisor</fullName>
            </value>
            <value>
                <fullName>Saver &amp; Plan Sponsor &amp; Trustee &amp; Advisor</fullName>
            </value>
            <value>
                <fullName>Saver &amp; Trustee &amp; Advisor</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>TPA - Operational Support</fullName>
            </value>
            <value>
                <fullName>TPA - Onboarding</fullName>
            </value>
            <value>
                <fullName>TPA - Sales</fullName>
            </value>
            <value>
                <fullName>Internal Payroll Contact</fullName>
            </value>
            <value>
                <fullName>External Payroll Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>