force-app/main/default/objects/Contact/fields/Saver_ID__c.field-meta.xml
<CustomField>
    <fullName>Saver_ID__c</fullName>
    <description>Individual Paradigm ID for Saver</description>
    <inlineHelpText>Individual Paradigm ID for Saver</inlineHelpText>
    <label>Saver ID</label>
    <type>TextArea</type>
</CustomField>