force-app/main/default/objects/Contact/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <description>If the contact has a secondary email associated with the account.</description>
    <inlineHelpText>If the contact has a secondary email associated with the account.  One of two emails that can be used to link cases to this contact</inlineHelpText>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>