force-app/main/default/objects/Contact/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <formula>TEXT(Account.Service_Option__c)</formula>
    <label>Service Option</label>
    <type>Text</type>
</CustomField>