force-app/main/default/objects/Contact/fields/Simple_Survey_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Simple_Survey_Campaign__c</fullName>
    <description>Flag Field to create a &quot;View&quot; to mass add existing contacts to Simple Survey Campaign</description>
    <inlineHelpText>Flag Field to create a &quot;View&quot; to mass add existing contacts to Simple Survey Campaign</inlineHelpText>
    <label>Simple Survey Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>