force-app/main/default/objects/Contact/fields/Simply_Proposal_Count__c.field-meta.xml
<CustomField>
    <fullName>Simply_Proposal_Count__c</fullName>
    <label>Simply Proposal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>