force-app/main/default/objects/Contact/fields/SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In__c</fullName>
    <formula>Text_Opt_In__c = TRUE</formula>
    <label>SMS Opt in</label>
    <type>Checkbox</type>
</CustomField>