force-app/main/default/objects/Contact/fields/Sponsor_Trustee_ID__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Trustee_ID__c</fullName>
    <description>Paradigm Individual ID for Sponsor/Trustee</description>
    <inlineHelpText>Paradigm Individual ID for Sponsor/Trustee</inlineHelpText>
    <label>Sponsor/Trustee ID</label>
    <type>TextArea</type>
</CustomField>