force-app/main/default/objects/Contact/fields/Stage_Flag__c.field-meta.xml
<CustomField>
    <fullName>Stage_Flag__c</fullName>
    <label>Stage Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>Share</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Expired Save/Share</fullName>
            </value>
            <value>
                <fullName>Updates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>