force-app/main/default/objects/Contact/fields/Subscription_Snooze__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Snooze__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Snooze</label>
    <type>Checkbox</type>
</CustomField>