force-app/main/default/objects/Contact/fields/Survey_Fatigue_Warning__c.field-meta.xml
<CustomField>
    <fullName>Survey_Fatigue_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, have a look at recent surveys to determine if additional surveys are appropriate.</description>
    <inlineHelpText>If checked, have a look at recent surveys to determine if additional surveys are appropriate.</inlineHelpText>
    <label>Survey Fatigue Warning</label>
    <type>Checkbox</type>
</CustomField>