force-app/main/default/objects/Contact/fields/Survey_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Survey_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSAT Survey Opt Out</label>
    <type>Checkbox</type>
</CustomField>