force-app/main/default/objects/Contact/fields/System_Update_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>System_Update_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client has opted out of system update emails from Ubiquity.</description>
    <inlineHelpText>Client has opted out of system update emails from Ubiquity.</inlineHelpText>
    <label>System Update Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>