force-app/main/default/objects/Contact/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Internal team name for referral tracking.</description>
    <inlineHelpText>Internal team name for referral tracking.</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Client Onboarding</fullName>
            </value>
            <value>
                <fullName>Client Support</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Finance + Accounting</fullName>
            </value>
            <value>
                <fullName>Financial Operations</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
                <isActive>false</isActive>
                <label>Implementations</label>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development</fullName>
            </value>
            <value>
                <fullName>Loans &amp; Distributions</fullName>
            </value>
            <value>
                <fullName>Marketing + Creative Group</fullName>
            </value>
            <value>
                <fullName>Operations Management</fullName>
            </value>
            <value>
                <fullName>Partner Strategy + Growth</fullName>
            </value>
            <value>
                <fullName>Payroll Koncierge</fullName>
            </value>
            <value>
                <fullName>Payroll Team</fullName>
            </value>
            <value>
                <fullName>People + Culture</fullName>
            </value>
            <value>
                <fullName>Platinum Servicing</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Product Innovation</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Saver Success</fullName>
            </value>
            <value>
                <fullName>Servicing Management</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Transitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>