force-app/main/default/objects/Contact/fields/Temp_List__c.field-meta.xml
<CustomField>
    <fullName>Temp_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp List</label>
    <type>Checkbox</type>
</CustomField>