force-app/main/default/objects/Contact/fields/Terminated_Plan_Participants__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Plan_Participants__c</fullName>
    <description>List of plan participants terminated in the last 24 hours with a balance over 5k.</description>
    <label>Terminated Plan Participants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>