force-app/main/default/objects/Contact/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>Date of employee termination</description>
    <inlineHelpText>Date of employee termination</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>