force-app/main/default/objects/Contact/fields/Text_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Text_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check = Contact is currently opted in to text messaging</description>
    <inlineHelpText>Check = Contact is currently opted in to text messaging</inlineHelpText>
    <label>Text Opt In</label>
    <type>Checkbox</type>
</CustomField>