force-app/main/default/objects/Contact/fields/Text_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Text_Opt_In_Date__c</fullName>
    <description>Date contact most recently opted into text messages</description>
    <inlineHelpText>Date contact most recently opted into text messages</inlineHelpText>
    <label>Text Opt In Date</label>
    <type>Date</type>
</CustomField>