force-app/main/default/objects/Contact/fields/Text_Opt_In_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Text_Opt_In_Survey_Link__c</fullName>
    <label>Text Opt In Survey Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>