force-app/main/default/objects/Contact/fields/Text_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Text_Opt_Out_Date__c</fullName>
    <description>Date contact most recently opted out of text messages</description>
    <inlineHelpText>Date contact most recently opted out of text messages</inlineHelpText>
    <label>Text Opt Out Date</label>
    <type>Date</type>
</CustomField>