force-app/main/default/objects/Contact/fields/Ubiquity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Ubiquity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ubiquity Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ubiquity Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>