force-app/main/default/objects/Contact/fields/X1st_Plan_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Plan_Sold_Date__c</fullName>
    <label>1st Plan Sold Date</label>
    <type>Date</type>
</CustomField>