force-app/main/default/objects/Contact/recordTypes/Partner_Contact.recordType-meta.xml
<RecordType>
    <fullName>Partner_Contact</fullName>
    <active>true</active>
    <description>Any contact on a partner account interacting with BizDev &amp; PSM teams. Partner contacts may also be savers/sponsors within Paradigm.</description>
    <label>Partner Contact</label>
</RecordType>