force-app/main/default/objects/Contact/recordTypes/Plan_Participant.recordType-meta.xml
<RecordType>
    <fullName>Plan_Participant</fullName>
    <active>true</active>
    <description>People who are ONLY Savers in plans with no other roles like Sponsor/Trustee/Advisor Etc</description>
    <label>Plan Participant</label>
</RecordType>