force-app/main/default/objects/Contact/recordTypes/TPA_Contact.recordType-meta.xml
<RecordType>
    <fullName>TPA_Contact</fullName>
    <active>true</active>
    <label>TPA Contact</label>
</RecordType>