force-app/main/default/objects/Contact/recordTypes/Ubiquity_Contact.recordType-meta.xml
<RecordType>
    <fullName>Ubiquity_Contact</fullName>
    <active>true</active>
    <description>Any client who is more than just a Saver - could be only Sponsor/Trustee OR Saver + Sponsor/Trustee etc.   Use for Partners or other non-client contacts.</description>
    <label>Ubiquity Contact</label>
</RecordType>