force-app/main/default/objects/Contact/recordTypes/Ubiquity_Employee.recordType-meta.xml
<RecordType>
    <fullName>Ubiquity_Employee</fullName>
    <active>true</active>
    <description>Used for Ubiquity Employees</description>
    <label>Ubiquity Employee</label>
</RecordType>