force-app/main/default/objects/Contact/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please enter an Account related to this Contact.</errorMessage>
</ValidationRule>