force-app/main/default/objects/Contact/validationRules/Plan_Participant_Record_Type_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Plan_Participant_Record_Type_Check</fullName>
    <active>true</active>
    <description>Confirm proper record type is selected on creation of contact</description>
    <errorConditionFormula>NOT(ISPICKVAL( Role__c , &quot;Saver&quot;))
&amp;&amp;
 BEGINS(RecordTypeId , &quot;01237000000TgxQ&quot;)
&amp;&amp; 
 ISNEW()</errorConditionFormula>
    <errorMessage>&quot;Plan Participant&quot; record type is for people who are ONLY Savers (Contact Role = Saver).   If someone is any combo of Saver/Sponsor/Trustee/Advisor etc, choose &quot;Ubiquity Contact&quot; for record type.</errorMessage>
</ValidationRule>