force-app/main/default/objects/Contact/validationRules/Ubiquity_Contact_Record_Type_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Ubiquity_Contact_Record_Type_Check</fullName>
    <active>true</active>
    <description>Confirm proper record type is selected on creation of contact</description>
    <errorConditionFormula>(ISPICKVAL( Role__c , &quot;Saver&quot;))
&amp;&amp;
 BEGINS(RecordTypeId , &quot;01237000000TgxL&quot;)
&amp;&amp; 
 ISNEW()</errorConditionFormula>
    <errorMessage>&quot;Ubiquity Contact&quot; cannot have a contact role of &quot;Saver&quot; only.   If you are entering a contact who is only a saver, go back and select &quot;Plan Participant.&quot;  If they are a saver + other roles (sponsor, trustee etc), choose a different Contact Role</errorMessage>
</ValidationRule>