force-app/main/default/objects/Contact/listViews/CFDD2006.listView-meta.xml
<ListView>
    <fullName>CFDD2006</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Seminar / Conference</value>
    </filters>
    <filters>
        <field>Conference_name__c</field>
        <operation>equals</operation>
        <value>CFDD Conference 2006</value>
    </filters>
    <label>CFDD 2006</label>
</ListView>