force-app/main/default/objects/Contact/listViews/My_Simply_Advisors.listView-meta.xml
<ListView>
    <fullName>My_Simply_Advisors</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Advisor_Interest__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Simply Retirement</value>
    </filters>
    <filters>
        <field>Advisor_Interest__c</field>
        <operation>notEqual</operation>
        <value>Actively Referring,Not Interested</value>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Partner_Contact</value>
    </filters>
    <label>My Simply Advisors</label>
    <sharedTo>
        <roleAndSubordinates>SVP_Strategy</roleAndSubordinates>
        <roleAndSubordinates>VP_of_Sales</roleAndSubordinates>
    </sharedTo>
</ListView>