force-app/main/default/objects/Contact/listViews/payrollcontacts.listView-meta.xml
<ListView>
    <fullName>payrollcontacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Conference_name__c</field>
        <operation>contains</operation>
        <value>swipeclock</value>
    </filters>
    <label>payroll contacts</label>
</ListView>