force-app/main/default/objects/Contact/listViews/PK_Payroll_Reminder_1_7_22.listView-meta.xml
<ListView>
    <fullName>PK_Payroll_Reminder_1_7_22</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Temp_List__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>PK Payroll Reminder, 2/3/22</label>
    <sharedTo>
        <group>Payroll_Koncierge</group>
    </sharedTo>
</ListView>