force-app/main/default/objects/Contact/listViews/Recent_Contacts.listView-meta.xml
<ListView>
    <fullName>Recent_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Business_Unit__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Simply Retirement</value>
    </filters>
    <label>Recent Contacts</label>
    <sharedTo>
        <roleAndSubordinates>SVP_Strategy</roleAndSubordinates>
    </sharedTo>
</ListView>