force-app/main/default/objects/Contact/listViews/SchwabRepList.listView-meta.xml
<ListView>
    <fullName>SchwabRepList</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>Schwab</value>
    </filters>
    <label>Schwab Rep List</label>
</ListView>