force-app/main/default/objects/Contact/listViews/SchwabRepList_d_2.listView-meta.xml
<ListView>
    <fullName>SchwabRepList_d_2</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Schwab Branch</value>
    </filters>
    <label>Schwab Rep List-</label>
</ListView>